[gd_scene load_steps=41 format=2]

[ext_resource path="res://Hitbox and hurtbox/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/Player.png" type="Texture" id=3]
[ext_resource path="res://Hitbox and hurtbox/Swordhitbox.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=67]
extents = Vector2( 7.5, 8.5 )

[sub_resource type="Animation" id=56]
resource_name = "AttackDown"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=57]
resource_name = "AttackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=58]
resource_name = "AttackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=59]
resource_name = "AttackUp"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=18]
resource_name = "IdleDown"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=19]
resource_name = "IdleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=20]
resource_name = "IdleRight"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=21]
resource_name = "IdleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=22]
resource_name = "MoveDown"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=23]
resource_name = "MoveLeft"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=24]
resource_name = "MoveRight"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=25]
resource_name = "MoveUp"
length = 0.55
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=26]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="AnimationNodeAnimation" id=60]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "AttackUp"

[sub_resource type="AnimationNodeAnimation" id=62]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=63]
animation = "AttackRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=64]
blend_point_0/node = SubResource( 60 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 61 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 62 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 63 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=50]
blend_point_0/node = SubResource( 46 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 47 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 48 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 49 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "MoveDown"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "MoveUp"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "MoveLeft"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "MoveRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=32]
blend_point_0/node = SubResource( 28 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 29 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 30 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 31 )
blend_point_3/pos = Vector2( 1, 0 )

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachineTransition" id=66]

[sub_resource type="AnimationNodeStateMachine" id=33]
states/Attack/node = SubResource( 64 )
states/Attack/position = Vector2( 383.75, 179.5 )
states/Idle/node = SubResource( 50 )
states/Idle/position = Vector2( 383.5, 76.375 )
states/Move/node = SubResource( 32 )
states/Move/position = Vector2( 591, 77 )
transitions = [ "Idle", "Move", SubResource( 51 ), "Move", "Idle", SubResource( 52 ), "Idle", "Attack", SubResource( 65 ), "Attack", "Idle", SubResource( 66 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=34]

[sub_resource type="CapsuleShape2D" id=68]
height = 12.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( -5, 98 )
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 104.5, 95.5 )
shape = SubResource( 67 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 105.487, 94.2846 )
scale = Vector2( 0.734765, 0.709856 )
texture = ExtResource( 3 )
hframes = 60

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 116, 98 )
current = true
zoom = Vector2( 0.25, 0.25 )
limit_left = 151
limit_top = 45
limit_right = 694
limit_bottom = 525
editor_draw_limits = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 56 )
anims/AttackLeft = SubResource( 57 )
anims/AttackRight = SubResource( 58 )
anims/AttackUp = SubResource( 59 )
anims/IdleDown = SubResource( 18 )
anims/IdleLeft = SubResource( 19 )
anims/IdleRight = SubResource( 20 )
anims/IdleUp = SubResource( 21 )
anims/MoveDown = SubResource( 22 )
anims/MoveLeft = SubResource( 23 )
anims/MoveRight = SubResource( 24 )
anims/MoveUp = SubResource( 25 )
anims/RESET = SubResource( 26 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 33 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 34 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Move/blend_position = Vector2( 0, 0 )

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2( 123, 101 )
rotation = 1.60035

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 105, 95 )

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource( 1 )]
position = Vector2( -105, -95 )
collision_mask = 8
script = ExtResource( 4 )
damage = 3

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
position = Vector2( 118, 95 )
shape = SubResource( 68 )
disabled = true

[editable path="HitboxPivot/SwordHitbox"]
